--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
         <a href="#" class="btn">Download CV</a>
       </div>
       <div class="home-img">
-        <img src="./background.jpg" alt="" />
+        <img src=".//background.jpg" alt="" />
       </div>
     </section>
     <section class="about" id="about">
       <div class="about-img">
-        <img src="./cool.jpg" alt="" />
+        <img src=".//cool.jpg" alt="" />
       </div>
       <div class="about-content">
         <h2 class="heading">About <span>Me</span></h2>
@@ -113,7 +113,7 @@
       <h2 class="heading">Latest <span>Project</span></h2>
       <div class="portfolio-container">
         <div class="portfolio-box">
-          <img src="./weather.jpg" alt="" />
+          <img src=".//weather.jpg" alt="" />
           <div class="portfolio-layer">
             <h4>Wheather Forecast Website</h4>
             <p>
@@ -123,7 +123,7 @@
           </div>
         </div>
         <div class="portfolio-box">
-          <img src="./clock.png" alt="" />
+          <img src=".//clock.png" alt="" />
           <div class="portfolio-layer">
             <h4>Clock Project</h4>
             <p>
@@ -134,7 +134,7 @@
           </div>
         </div>
         <div class="portfolio-box">
-          <img src="./idragon.jpg" alt="" />
+          <img src=".//idragon.jpg" alt="" />
           <div class="portfolio-layer">
             <h4>Idragon Game Project</h4>
             <p>
@@ -144,7 +144,7 @@
           </div>
         </div>
         <div class="portfolio-box">
-          <img src="./spotify.png" alt="" />
+          <img src=".//spotify.png" alt="" />
           <div class="portfolio-layer">
             <h4>Spotify Clone Project</h4>
             <p>
