--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <a href="https://www.instagram.com/"><i class="bx bxl-instagram-alt"></i></a>
           <a href="https://www.linkedin.com/feed/"><i class="bx bxl-linkedin"></i></a>
         </div>
-        <a href="#" class="btn">Download CV</a>
+        <a href=".//resume.pdf" class="btn">Download CV</a>
       </div>
       <div class="home-img">
         <img src=".//background.jpg" alt="" />
