--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
           hardwork, attention to detail and excellent organisational skills
         </p>
         <div class="social-media">
-          <a href="https://www.facebook.com/"><i class="bx bxl-facebook"></i></a>
-          <a href="https://twitter.com/home?lang=en"><i class="bx bxl-twitter"></i></a>
-          <a href="https://www.instagram.com/"><i class="bx bxl-instagram-alt"></i></a>
-          <a href="https://www.linkedin.com/feed/"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.facebook.com/profile.php?id=100029427462114"><i class="bx bxl-facebook"></i></a>
+          <a href="https://twitter.com/niikhiljha"><i class="bx bxl-twitter"></i></a>
+          <a href="https://www.instagram.com/mr_usernotfound21/"><i class="bx bxl-instagram-alt"></i></a>
+          <a href="https://www.linkedin.com/in/nikhil-jha-868379219/"><i class="bx bxl-linkedin"></i></a>
         </div>
         <a href=".//resume.pdf" class="btn">Download CV</a>
       </div>
