--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="home-content">
         <h3>Hello, It's Me</h3>
         <h1>Nikhil Jha</h1>
-        <h3>And I'm a <span class="multiple-text"></span></h3>
+        <h3>And I'm a <span class="multiple-text">FrontEnd Developer!</span></h3>
         <p>
           A third year student pursuing Bachelors in Computer Science and
           Engineering with Specialization in AI and ML. Enthusiastic and
